<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    android:background="@color/colorBlack"
    tools:context=".view.activity.MainActivity">

    <ProgressBar
        android:id="@+id/pb_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lt_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">
    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/lt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:queryHint="@string/country_name"
            android:layout_marginTop="@dimen/_18sdp"
            android:padding="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_home_title"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total_confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_margin="@dimen/_4sdp"
        app:strokeWidth="1dp"
        app:strokeColor="#CCC"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cv_total_deceased"
        app:layout_constraintTop_toBottomOf="@id/lt_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:padding="@dimen/_2sdp">

            <TextView
                android:id="@+id/tv_total_confirmed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="#2196F3"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_confirmed_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed_number"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="#2196F3"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_total_confirmed_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total_deceased"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        android:layout_margin="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:strokeColor="#CCC"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/lt_search"
        app:layout_constraintStart_toEndOf="@id/cv_total_confirmed"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:padding="@dimen/_2sdp">

            <TextView
                android:id="@+id/tv_total_deceased_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_deceased"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorRed"
                android:layout_margin="@dimen/_4sdp"
                />

            <TextView
                android:id="@+id/tv_total_deceased_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed_number"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorRed"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_total_deceased_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_total_recovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        android:layout_margin="@dimen/_4sdp"
        app:strokeColor="#CCC"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_total_confirmed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:padding="@dimen/_2sdp">

            <TextView
                android:id="@+id/tv_total_recovered_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_recovered"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorGreen"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_recovered_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_confirmed_number"
                android:textAlignment="center"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorGreen"
                android:layout_margin="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_total_recovered_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_countries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cv_total_recovered"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        tools:listitem="@layout/country_list_item"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>